2017-05-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS (info): Add items about setting style variables and 
	--vi-keys.

2017-05-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (replace_in_documentation): Remove code
	setting variables whose value is no longer used anywhere.

2017-05-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS (info): Add item about the handling of Info files
	with CR-LF line endings.

2017-05-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (replace_in_documentation): Use functions 
	operating on a struct text_buffer object to keep track of
	whether there is enough space in the output buffer.
	Benno Schulenberg reported that there would be an out-of-bounds
	write when a message reporting an index match was output if the
	binding of ',' had been changed away from 'next-index-match'.

2017-05-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (replace_in_documentation): Explicitly compare 
	a pointed-to character to the only character value it can be 
	equal to other than null, for clarity.  Move code near other 
	code that uses the same variables.  Change comment for a special
	case to make it easier to ignore, and move the default case 
	before the conditional for the special case.  No functional 
	changes.

2017-05-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (replace_in_documentation):
	Remove code to handle numbers before command name, like
	"\\[6next-line]" meaning "M-6 M-x next-line", as it is not used 
	anywhere, and this simplifies the code.

2017-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/cr-tag-table.sh: Remove test.
	* info/t/inc-sea-bs-after-strip-cr: Remove test.

2017-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c, info/filesys.c (convert_eols): Function moved 
	between files.  Change arguments and modify text in place.  Do
	not realloc the buffer to make it smaller.
	* info/filesys.c (filesys_read_info_file)